# bunkerweb-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose-mcp-only.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/grafana/dashboards/: bunkerweb-mcp.json  mcp-bunkerweb.json
deploy/grafana/provisioning/dashboards/: default.yml
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  servicemonitor.yaml
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: LOAD_TESTING_GUIDE.md  OBSERVABILITY.md  security.md
docs/adr/: 0001-use-fastmcp-sdk.md  0002-externalize-search-service.md  0003-pydantic-v2-validation.md  0004-async-httpx-client.md  README.md  template.md
n8n-workflows/: BunkerWeb AI Agent - MCP Integration.json  MCP-Tool-BanIP.json  MCP-Tool-CreateService.json  MCP-Tool-DeleteService.json  MCP-Tool-GetService.json  MCP-Tool-GlobalConfig.json  MCP-Tool-ListBans.json  MCP-Tool-ListInstances.json  MCP-Tool-ListServices.json  MCP-Tool-ReloadConfig.json  MCP-Tool-SearchDocs.json  MCP-Tool-UnbanIP.json  MCP-Tool-UpdateService.json  README.md
scripts/: check-all.sh
src/bunkerweb_mcp/: __init__.py  cache.py  cli.py  client.py  config.py  exceptions.py  main.py  mcp_adapter.py  metrics.py  prompt_catalog.py  rate_limiter.py  search_client.py  tracing.py
src/bunkerweb_mcp/data/: tool_prompts.json
src/bunkerweb_mcp/schemas/: __init__.py  bans.py  cache.py  common.py  configs.py  core.py  global_config.py  instances.py  jobs.py  plugins.py  services.py
src/bunkerweb_mcp/tools/: __init__.py  ban_handlers.py  cache_handlers.py  config_handlers.py  core_handlers.py  instance_handlers.py  job_handlers.py  params.py  plugin_handlers.py  registry.py  service_handlers.py
src/bunkerweb_mcp/utils/: logging.py
tests/: asgi.py  locustfile.py  simple_loadtest.py  test_api.py  test_cli.py  test_client.py  test_main.py  test_mcp_adapter.py  test_observability.py  test_rate_limiting.py  test_tools.py
